added functions and variables to sass

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,2 +1,6 @@
+@import "./sass/functions.scss";
+@import "./sass/variables.scss";
+
 @import "./sass/main.scss";
 @import "./sass/media.scss";
+@import "./sass/utils.scss";
