layout and stylized app

--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -1,1 +1,9 @@
+$white: #fff;
+$black: #000;
+$grey: grey;
+$alert: #ff0000;
+
 $spinner: #1c87c9;
+$backgroundColorButtonLogIn: #295c9b;
+$backgroundColorButtonLogOut: #007eff;
+$backgroundColorButtonDisabled: #dddddd;
