--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -9,6 +9,16 @@ body {
   box-sizing: border-box;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -28,10 +38,96 @@ main {
   height: 100%;
 }
 
-.form {
+form {
+  width: rem(240);
+
+  > div {
+    margin-bottom: 12px;
+  }
+
+  p {
+    margin: 0;
+  }
+
+  button {
+    background-color: $backgroundColorButtonLogIn;
+    color: $white;
+    width: 100%;
+    padding: 10px 20px;
+    border: 0;
+    margin-top: 12px;
+  }
+
+  button[type="submit"]:disabled {
+    background: $backgroundColorButtonDisabled;
+    color: $grey;
+  }
+
+  input {
+    border: 0;
+    border-bottom: 1px solid grey;
+    padding: 10px;
+    outline: 0;
+    width: 100%;
+  }
+
+  p[role="alert"] {
+    color: $alert;
+    font-size: rem(12);
+    margin-bottom: 5px;
+  }
+}
+
+section {
   height: 100%;
-  border: 1px solid red;
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
+  width: rem(240);
+  margin: auto;
+
+  h1 {
+    padding-bottom: 25px;
+  }
+
+  h5 {
+    padding-bottom: 50px;
+  }
+
+  button {
+    background-color: $backgroundColorButtonLogOut;
+    color: $white;
+    width: 100%;
+    padding: 10px 20px;
+    border: 0;
+    margin-top: 12px;
+  }
+
+  .grid {
+    color: $grey;
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    margin-bottom: 10px;
+  }
+
+  .time {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+
+    .number {
+      font-size: rem(36);
+      margin-bottom: 10px;
+    }
+  }
+}
+
+.form {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
